<resources>
    <string name="app_name">COVID-19</string>
    <string name="about_covid">Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered virus. Most of the people who fall sick with coronavirus will experience some symptoms and recover with special treatment</string>
    <string name="covid">COVID-19</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Heading">COVID-19 APP</string>
    <string name="donar">DONAR</string>
    <string name="home">HOME</string>
    <string name="covid_19">Covid-19</string>
    <string name="plasma_receiver">Plasma Receiver</string>
    <string name="logout">LOGOUT</string>
</resources>